Fix for bug 135895 (XHTML <style> element not working). r=sicking, sr=jst.